--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
   - init: cargo build
-    command: cargo watch -x run
+    # command: cargo watch -x run
 image:
   file: .gitpod.Dockerfile
