--- a/src/ch18/Cargo.toml
+++ b/src/ch18/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_study"
+name = "ch18"
 version = "0.1.0"
 authors = ["akeboshi <isao-aruga@bm-sms.co.jp>"]
 edition = "2018"
@@ -7,13 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "0.1"
-num = "0.2.1"
-
-[workspace]
-members = [
-    "src/foo",
-    "src/ch16",
-    "src/ch17",
-    "src/ch18"
-]
